# fishfood

./: .gitignore  COMMERCIAL.md  LICENSE  README.md  fish_food.py  pyproject.toml  pyrightconfig.json  render_gif.py  requirements.txt
.agents/skills/workload-capacity-planner/: SKILL.md
deploy/: fishfood.desktop  run_fishfood.sh
docs/: MODEL.md
